--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node scripts/version-bump.mjs",
 		"test": "vitest",
-		"test:coverage": "vitest --coverage"
+		"test:coverage": "vitest --coverage",
+		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,7 +23,7 @@
 		"esbuild-copy-static-files": "^0.1.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4",
+		"typescript": "^5.7.2",
 		"vitest": "^4.0.13"
 	}
 }
