add preact to project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "types": ["vitest/globals"],
     "lib": [
       "DOM",
@@ -21,7 +23,8 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
