--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"tslib": "2.4.0",
 		"typescript": "^5.7.2",
 		"vitest": "^4.0.13"
+	},
+	"dependencies": {
+		"@preact/signals": "^2.5.1",
+		"preact": "^10.27.2"
 	}
 }
