--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "node ./scripts/esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"build": "tsc -noEmit -skipLibCheck && node ./scripts/esbuild.config.mjs production",
 		"version": "node scripts/version-bump.mjs",
 		"test": "vitest",
 		"test:coverage": "vitest --coverage",
