--- a/.github/workflows/build_plugin.yml
+++ b/.github/workflows/build_plugin.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: plugin-build
-          path: plugin-build.zip
+          name: sinitsa-plugin-${{ github.sha }}
+          path: sinitsa-plugin-${{ github.sha }}.zip
           retention-days: 30
